# job_portal_website

./: README.md  app.py  applications.py  auth.py  base.html  config.py  create.html  forms.py  index.html  jobs.py  models.py  pyproject.toml  register.html  style.css
templates/application/: apply.html
templates/auth/: login.html
